<resources>
    <string name="app_name">JobSpot</string>
    <string name="phone_number_entry_fragment_title">Sign In</string>
    <string name="phone_number_entry_fragment_description">Please, enter your phone number</string>
    <string name="phone_number_prompt">Phone number</string>
    <string name="get_confirmation_code_action_description">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_phone_number_format">Invalid phone number format</string>
    <string name="confirmation_code_send_failed">An error occurred while sending the confirmation code</string>
    <string name="confirmation_code_fragment_title">Phone number verification</string>
    <string name="confirmation_code_fragment_description">Enter your verification code sent to %1$s</string>
    <string name="explorer_activity_title">Explorer</string>
    <string name="home_fragment_title">Home</string>
    <string name="dashboard_fragment_title">Dashboard</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmation_code_prompt">Verification code</string>
    <string name="confirm_entry_action">Confirm</string>
    <string name="lastname_prompt">Lastname</string>
    <string name="firstname_prompt">Firstname</string>
    <string name="middlename_prompt">Middlename (optional)</string>
    <string name="registration_fragment_title">Tell us about yourself</string>
    <string name="registration_fragment_description">We need to know very little about you!</string>
    <string name="is_worker_prompt">I want to use this app to find a job</string>
    <string name="authorization_server_error">Authorization server is not available now. Try later</string>
    <string name="unexpected_error">An unexpected error has occurred</string>
    <string name="invalid_confirmation_code_format">Invalid confirmation code</string>
    <string name="incorrect_confirmation_code">Incorrect confirmation code</string>
    <string name="confirmation_code_verification_error">An error occurred while checking the code</string>
    <string name="resend_code_action">Resend verification code</string>
    <string name="verify_code_action">Verify</string>
    <string name="confirmation_code_resent_successfully">Verification code resent to %1$s</string>
    <string name="authorization_canceled_error">Authorization canceled by user</string>
    <string name="invalid_lastname">Invalid lastname</string>
    <string name="invalid_firstname">Invalid firstname</string>
    <string name="settings_drawer_item">Settings</string>
    <string name="address_title">Your address</string>
    <string name="search_history_drawer_item">Search history</string>
    <string name="failed_to_determine_address">Failed to determine address</string>
    <string name="current_location_description">Current location</string>
    <string name="two_kilometers_chip_text">2 km</string>
    <string name="five_kilometers_chip_text">5 km</string>
    <string name="three_kilometers_chip_text">3 km</string>
    <string name="search_radius_title">Search radius</string>
    <string name="service_title">Service</string>
    <string name="start_searching_text">Find worker</string>
    <string name="select_service_text">Select a service</string>
    <string name="access_to_geolocation_alert_header">Access to geolocation</string>
    <string name="access_to_geolocation_alert_description">Allow access to the geolocation, otherwise the application will not be able to determine where you are</string>
    <string name="access_to_geolocation_alert_positive_button">OK</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="cancel_search">Cancel search</string>
    <string name="search_in_progress">Search in progress</string>
    <string name="search_progress_description">within a radius of %1$s</string>
    <string name="one_kilometer_chip_text">1 km</string>
    <string name="five_hundred_meters_chip_text">500 m</string>
    <string name="home_address">Home address</string>
    <string name="invalid_home_address">Invalid home address</string>
    <string name="cancel_order">Cancel order</string>
    <string name="call_a_worker">Call a worker</string>
    <string name="address_prompt">Address</string>
    <string name="received_your_order_prompt">received your order</string>
    <string name="accept_button_prompt">Accept</string>
    <string name="you_received_an_order_prompt">You received an order</string>
    <string name="finish_order">Finish order</string>
    <string name="call_a_client">Call a client</string>
    <string name="cancel_order_alert_title">Confirm order cancellation</string>
    <string name="cancel_order_alert_description">Are you sure you want to cancel the order?</string>
    <string name="cancel_entry_action">Cancel</string>
    <string name="order_finished_alert_title">Order completed</string>
    <string name="rate_your_client_description">Please rate your client</string>
    <string name="rate_worker_description">Please rate worker</string>
    <string name="logout">Logout</string>
    <string name="empty_services_prompt">Service selection is not supported at this time =(</string>
    <string name="start_search_prompt">Start typing the address to begin the search</string>
    <string name="address_search_failed_prompt">An error occurred while searching for an address</string>
    <string name="empty_addresses_prompt">Address not found</string>
    <string name="profession">Profession</string>
    <string name="invalid_profession">Invalid profession</string>
    <string name="verification_bar_title">Your profile is being verified</string>
    <string name="verification_bar_prompt">You are unable to take orders at this time</string>
    <string name="diploma">Diploma</string>
    <string name="inn">Taxpayer Identification Number</string>
    <string name="employment_history_book">Employment history book</string>
    <string name="personal_data_agreement">I agree to the processing of my personal data</string>
    <string name="client_rating">Client rating</string>
    <string name="clarify_apartment_number">Please clarify your apartment number</string>
</resources>